# ZoomBotLinuxSDK

./: .gitignore  README.md  requirements.txt
.VSCodeCounter/2025-03-10_22-00-45/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
rzbcpp/: BotRecording.cpp  BotRecording.h  CMakeLists.txt  MeetingParticipantsCtrlEventListener.cpp  MeetingParticipantsCtrlEventListener.h  MeetingRecordingCtrlEventListener.cpp  MeetingServiceEventListener.cpp  ZoomBot.cpp  ZoomBot.h  ZoomSDKAudioRawData.cpp  ZoomSDKAudioRawData.h  bot_recording_wrapper.cpp  main.cpp  mainapp.cpp
rzbcpp/include/event_listeners/: AuthServiceEventListener.h  MeetingAudioCtrlEventListener.h  MeetingRecordingCtrlEventListener.h  MeetingServiceEventListener.h
rzbcpp/src/event_listeners/: AuthServiceEventListener.cpp  MeetingAudioCtrlEventListener.cpp
rzbcpp/src/media_handlers/: ZoomSDKAudioRawData.cpp  ZoomSDKRenderer.cpp  ZoomSDKVideoSource.cpp
rzbpy/: example.py  test.py
rzbpy/recozoombot/: __init__.py  rzb.py
rzbpy/token_generate/: index.js
rzbpy/zbpy_pkg/: __init__.py  interface.py
utils/installers/: install_zoom_sdk.sh
utils/token_generate/: index.js
